# pamac-qt

./: .gitignore  AboutDialog.qml  AboutDialogForm.ui.qml  AlpmDB.cpp  AlpmDB.h  AlpmList.h  AlpmPackagesModel.cpp  AlpmPackagesModel.h  AlpmPkg.h  BottomPanel.qml  CMakeLists.txt  CategoriesSideMenu.qml  Config.h  Database.cpp  Database.h  HomeForm.ui.qml  JSUtils.js  LICENSE  MainSideMenu.qml  MenuItemDelegate.qml  Package.h  PackageInfoSideMenu.qml  PackageItemDelegate.qml  PackageList.h  PackageModel.cpp  PackageModel.h  Page1Form.ui.qml  Page2Form.ui.qml  PageInstalledPackages.qml  PageInstalledPackagesForm.ui.qml  PagePackageInfo.qml  PagePackageInfoForm.ui.qml  PagePackageTable.qml  Pamac-Qt.pro  PamacToolBar.qml  PreferencesDialog.qml  PreferencesDialogForm.ui.qml  README.md  ReposSideMenu.qml  SideBar.qml  (+14 more)
app/: CMakeLists.txt  qml.qrc
app/data/applications/: pamac-qt-tray.desktop.in  pamac-qt.desktop.in
app/src/: main.cpp
app/src/cpp/: QmlDialogRunner.cpp  QmlDialogRunner.h
app/src/cpp/include/: Application.h  QmlDialogRunner.h  Utils.h
app/src/cpp/src/: Application.cpp  QmlDialogRunner.cpp  main.cpp
app/src/js/: JSUtils.js
app/src/qml/: AboutDialog.qml  AskImportKeyDialog.qml  BottomPanel.qml  Header.qml  HistoryDialog.qml  LoaderDelegate.qml  MainWindow.qml  MenuItemDelegate.qml  OpenWithDialog.qml  PackageDelegate.qml  PackageList.qml  PageAURPackageInfo.qml  PagePackageInfo.qml  PreferencesCheckBox.qml  PreferencesDialog.qml  ProgressBar.qml  SearchPane.qml  SideBar.qml  SideMenuAURPackageInfo.qml  SideMenuCategories.qml  SideMenuGroups.qml  SideMenuInstalled.qml  SideMenuMain.qml  SideMenuPackageInfo.qml  SideMenuPending.qml  SideMenuRepos.qml  SideMenuSearch.qml  SidePanel.qml  SummaryCategoryListView.qml  Table.qml  ToolBar.qml  TransactionDetails.qml  TransactionOptDependsDialog.qml  TransactionSummaryDialog.qml  TrayIcon.qml  UpdatesPage.qml
app/src/qml/Components/: Footer.qml  Header.qml  MainContextMenuButton.qml  MenuItemDelegate.qml  PackageCard.qml  PackageDelegate.qml  PackageList.qml  Pendings.qml  PreferencesCheckBox.qml  ProgressBar.qml  SearchPane.qml  SidePanel.qml  SummaryCategoryListView.qml  Table.qml  ToolBar.qml  TransactionDetails.qml  TrayIcon.qml
app/src/qml/Components/SideMenu/: Drawer.qml  SideMenuAURPackageInfo.qml  SideMenuCategories.qml  SideMenuGroups.qml  SideMenuInstalled.qml  SideMenuMain.qml  SideMenuPackageInfo.qml  SideMenuPending.qml  SideMenuRepos.qml  SideMenuSearch.qml
app/src/qml/Dialogs/: AboutDialog.qml  AskImportKeyDialog.qml  HistoryDialog.qml  OpenWithDialog.qml  PreferencesDialog.qml  ScreenshotViewerDialog.qml  TransactionOptDependsDialog.qml  TransactionSummaryDialog.qml  TransactionSummaryDialog.qml.orig
app/src/qml/Pages/: MainWindow.qml  PageAURPackageInfo.qml  PagePackageInfo.qml  UpdatesPage.qml
data/: pamac-qt.desktop
icons/builtin/: index.theme
libqpamac/: CMakeLists.txt
libqpamac/include/: AlpmPackage.h  AsyncHelpers.h  AurPackage.h  AurPackageModel.h  Config.h  Database.h  HistoryItemModel.h  LibQPamacModule.h  Package.h  PackageList.h  PackageModel.h  RepoPackage.h  SnapPackage.h  SnapPlugin.h  Transaction.h  Updates.h  Utils.h  libqpamac
libqpamac/src/: AsyncHelpers.cpp  AurPackageModel.cpp  Config.cpp  Database.cpp  HistoryItemModel.cpp  LibQPamacModule.cpp  PackageModel.cpp  SnapPlugin.cpp  Transaction.cpp  Utils.cpp
notificationservice/: CMakeLists.txt
notificationservice/include/: AbstractNotifier.h  DesktopProgress.h  Notification.h  NotificationService.h  NotificationServiceModule.h  Notifier.h  TrayIconNotifier.h  UnityProgressNotifier.h
notificationservice/src/: DesktopProgress.cpp  Notification.cpp  NotificationService.cpp  NotificationServiceModule.cpp  Notifier.cpp  TrayIconNotifier.cpp
qmltable/: CMakeLists.txt
src/cpp/include/: AURPackage.h  AURPackageModel.h  AbstractNotifier.h  AsyncHelpers.h  Config.h  Database.h  HistoryItemModel.h  NotificationService.h  Package.h  PackageList.h  PackageModel.h  QQuickDialog.h  QmlTableModel.h  RepoPackage.h  Transaction.h  UnityProgressNotifier.h  Updates.h  Utils.h  XDGIconProvider.h
src/cpp/src/: AURPackageModel.cpp  AbstractNotifier.cpp  AsyncHelpers.cpp  Database.cpp  HistoryItemModel.cpp  NotificationService.cpp  PackageModel.cpp  QQuickDialog.cpp  QmlTableModel.cpp  Transaction.cpp  UnityProgressNotifier.cpp  Utils.cpp  XDGIconProvider.cpp  main.cpp
src/js/: JSUtils.js
src/qml/: AURPackageDelegate.qml  AboutDialog.qml  AboutDialogForm.ui.qml  BottomPanel.qml  Header.qml  HistoryDialog.qml  LoaderDelegate.qml  MainWindow.qml  MenuItemDelegate.qml  OpenWithDialog.qml  PackageItemDelegate.qml  PackageList.qml  PackageTable.qml  PageAURPackageInfo.qml  PageAURPackageTable.qml  PagePackageInfo.qml  PagePackageInfoForm.ui.qml  PagePackageTable.qml  PageRepoPackageTable.qml  PamacToolBar.qml  PreferencesCheckBox.qml  PreferencesDialog.qml  PreferencesDialogForm.ui.qml  RepoPackageDelegate.qml  SearchPane.qml  SideBar.qml  SideMenuCategories.qml  SideMenuGroups.qml  SideMenuInstalled.qml  SideMenuMain.qml  SideMenuPackageInfo.qml  SideMenuPending.qml  SideMenuRepos.qml  SideMenuSearch.qml  SummaryCategoryListView.qml  Table.qml  TableView.qml  ToolBar.qml  TransactionDetails.qml  TransactionOptDependsDialog.qml  (+2 more)
